--- a/src/app/bizonylat/bizonylatirat/bizonylat-irat-container/bizonylat-irat-container.component.html
+++ b/src/app/bizonylat/bizonylatirat/bizonylat-irat-container/bizonylat-irat-container.component.html
@@ -14,6 +14,7 @@ Levalasztas = 4
   <app-irat-egy></app-irat-egy>
 </ng-container>
 <ng-container *ngIf="bizonylatkapcsolatservice.ContainerMode === 3">
+  <app-bizonylat-irat-uj></app-bizonylat-irat-uj>
 </ng-container>
 
 <ng-container *ngIf="bizonylatkapcsolatservice.ContainerMode === 4">
