--- a/src/app/bizonylat/bizonylatirat/bizonylat-irat-uj/bizonylat-irat-uj.component.html
+++ b/src/app/bizonylat/bizonylatirat/bizonylat-irat-uj/bizonylat-irat-uj.component.html
@@ -44,7 +44,7 @@
       </div>
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="targy"
-               maxlength="200" required autocomplete="off"
+               maxlength="200" autocomplete="off"
                [(ngModel)]="bizonylatkapcsolatservice.UjIratDto.TARGY" name="targy">
       </div>
     </div>
