--- a/src/app/teendo/teendo-egy/teendo-egy.component.html
+++ b/src/app/teendo/teendo-egy/teendo-egy.component.html
@@ -39,4 +39,5 @@ Modositas = 3
 
   <app-errormodal [cim]="teendoservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
 
