--- a/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-egy/bizonylat-kifizetes-egy.component.html
+++ b/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-egy/bizonylat-kifizetes-egy.component.html
@@ -1,3 +1,45 @@
-<p>
-  bizonylat-kifizetes-egy works!
-</p>
+<div class="alapkeret">
+  <h5>{{bizonylatkifizetesservice.cim}}</h5>
+  <div style="margin-bottom: 10px">
+    <div style="font-size: smaller">{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].OSSZEG}} {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].PENZNEM}} {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].FIZETESIMOD}}</div>
+  </div>
+  <div>
+    <nav>
+      <button [disabled]="eppFrissit" (click)="vissza()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
+      </button>
+      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+      </button>
+
+      <button [disabled]="eppFrissit"
+              (click)="torles()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-minus" aria-hidden="true"></i>
+      </button>
+      <button [disabled]="eppFrissit"
+              (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
+        <i class="fa fa-edit" aria-hidden="true"></i>
+      </button>
+    </nav>
+  </div>
+
+  <!--  export enum BizonylatKifizetesEgyMode {
+Reszletek = 1,
+Torles = 2,
+Modositas = 3
+}-->
+
+  <ng-container *ngIf="bizonylatkifizetesservice.EgyMode === 1">
+    <app-bizonylat-kifizetes-reszletek></app-bizonylat-kifizetes-reszletek>
+  </ng-container>
+  <ng-container *ngIf="bizonylatkifizetesservice.EgyMode === 2">
+    <app-bizonylat-kifizetes-torles></app-bizonylat-kifizetes-torles>
+  </ng-container>
+  <ng-container *ngIf="bizonylatkifizetesservice.EgyMode === 3">
+    <app-bizonylat-kifizetes-szerkesztes></app-bizonylat-kifizetes-szerkesztes>
+  </ng-container>
+
+  <app-errormodal [cim]="bizonylatkifizetesservice.cim"></app-errormodal>
+</div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
+
