--- a/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-szerkesztes/bizonylat-kifizetes-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylatkifizetes/bizonylat-kifizetes-szerkesztes/bizonylat-kifizetes-szerkesztes.component.html
@@ -1,3 +1,82 @@
-<p>
-  bizonylat-kifizetes-szerkesztes works!
-</p>
+<div class="alapkeret">
+  <h5 *ngIf="bizonylatkifizetesservice.uj">Új {{bizonylatkifizetesservice.cim | lowercase}}</h5>
+  <h5 *ngIf="!bizonylatkifizetesservice.uj">{{bizonylatkifizetesservice.cim}} módosítása</h5>
+
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
+
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Dátum</div>
+      </div>
+      <div class="col-md-2">
+        <input type="date" class="form-control form-control-sm" id="datum"
+               [(ngModel)]="Datum" name="datum">
+      </div>
+    </div>
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Összeg</div>
+      </div>
+      <div class="col-md-2">
+        <input type="number" class="form-control form-control-sm" id="osszeg"
+               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.OSSZEG" name="osszeg">
+      </div>
+    </div>
+
+
+
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Pénznem</div>
+      </div>
+      <div class="col-md-2">
+        <input type="text" class="form-control form-control-sm" id="penznem"
+               maxlength="3" required autocomplete="off" style="background-color: aquamarine"
+               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.PENZNEM" name="penznem">
+      </div>
+      <div class="col-md-1">
+        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="PenznemZoom()">...</button>
+      </div>
+    </div>
+
+    <div class="row no-gutters editform-row">
+      <div class="col-md-2">
+        <div class="editform-title">Fizetési mód</div>
+      </div>
+      <div class="col-md-2">
+        <input type="text" class="form-control form-control-sm" id="fizetesimod"
+               maxlength="20" required autocomplete="off" style="background-color: aquamarine"
+               [(ngModel)]="bizonylatkifizetesservice.DtoEdited.FIZETESIMOD" name="fizetesimod">
+      </div>
+      <div class="col-md-1">
+        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="FizetesimodZoom()">...</button>
+      </div>
+    </div>
+
+
+    <div class="row no-gutters" style="margin-bottom: 10px">
+      <div class="col-md-2"></div>
+      <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+    </div>
+  </form>
+
+  <!--  export enum IratSzerkesztesMode {
+    Blank = 0,
+    PenznemZoom = 1,
+    FizetesimodZoom = 2,
+    }-->
+  <ng-container *ngIf="bizonylatkifizetesservice.SzerkesztesMode === 0">
+    <app-blank></app-blank>
+  </ng-container>
+  <ng-container *ngIf="bizonylatkifizetesservice.SzerkesztesMode === 1">
+    <app-penznem-container></app-penznem-container>
+  </ng-container>
+  <ng-container *ngIf="bizonylatkifizetesservice.SzerkesztesMode === 2">
+    <app-fizetesimod-container></app-fizetesimod-container>
+  </ng-container>
+
+  <app-errormodal [cim]="bizonylatkifizetesservice.cim"></app-errormodal>
+</div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
+
