--- a/src/app/fizetesimod/fizetesimod-list/fizetesimod-list.component.html
+++ b/src/app/fizetesimod/fizetesimod-list/fizetesimod-list.component.html
@@ -17,7 +17,8 @@
     </thead>
     <tbody>
     <tr *ngFor="let item of fizetesimodservice.Dto; let i = index">
-      <td *ngIf="fizetesimodservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
+      <td *ngIf="fizetesimodservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
+          (click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
       <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.FIZETESIMODKOD}}</td>
       <td>{{item.FIZETESIMOD1}}</td>
     </tr>
