--- a/src/app/bizonylat/bizonylat-osnxml/bizonylat-osnxml.component.html
+++ b/src/app/bizonylat/bizonylat-osnxml/bizonylat-osnxml.component.html
@@ -1,3 +1,6 @@
-<p>
-  bizonylat-osnxml works!
-</p>
+<div class="alapkeret">
+  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} OSN xml</h5>
+  <div>{{result}}</div>
+  <app-errormodal [cim]="bizonylatservice.bizonylatLeiro.BizonylatNev"></app-errormodal>
+</div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
