--- a/src/app/bizonylat/bizonylat-kiszallitva/bizonylat-kiszallitva.component.html
+++ b/src/app/bizonylat/bizonylat-kiszallitva/bizonylat-kiszallitva.component.html
@@ -1,3 +1,7 @@
-<p>
-  bizonylat-kiszallitva works!
-</p>
+<div class="alapkeret">
+  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} kiszállítva</h5>
+  <div>Kiszállítva: {{bizonylatservice.Dto[bizonylatservice.DtoSelectedIndex].KISZALLITVA | boolhun}}</div>
+  <button class="btn btn-sm btn-primary" [disabled]="eppFrissit" (click)="modositas()">Módosítás</button>
+  <app-errormodal [cim]="bizonylatservice.bizonylatLeiro.BizonylatNev"></app-errormodal>
+</div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
