--- a/src/app/bizonylat/bizonylat-torles/bizonylat-torles.component.html
+++ b/src/app/bizonylat/bizonylat-torles/bizonylat-torles.component.html
@@ -1,3 +1,10 @@
-<p>
-  bizonylat-torles works!
-</p>
+<div class="alapkeret">
+  <h5>{{bizonylatservice.bizonylatLeiro.BizonylatNev}} törlése</h5>
+  <p>Biztosan törölni akarja ezt a tételt?</p>
+  <div class="row no-gutters" style="margin-bottom: 10px">
+    <button class="btn btn-sm btn-primary" [disabled]="eppFrissit" type="button" (click)="ok()">Ok</button>
+    <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+  </div>
+  <app-errormodal [cim]="bizonylatservice.cim"></app-errormodal>
+</div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
