--- a/src/app/bizonylat/bizonylat-reszletek/bizonylat-reszletek.component.html
+++ b/src/app/bizonylat/bizonylat-reszletek/bizonylat-reszletek.component.html
@@ -3,9 +3,9 @@
   <div>Bizonylat</div>
   <app-bizonylattabla [enIdclick]="false" [Dto]="dto"></app-bizonylattabla>
   <div>Tételek</div>
-  <app-bizonylatteteltabla [enIdclick]="false" [Dto]="bizonylatservice.LstTetelDto"></app-bizonylatteteltabla>
+  <app-bizonylatteteltabla [enIdclick]="false" [Dto]="bizonylatservice.TetelDto"></app-bizonylatteteltabla>
   <div>ÁFA összesítés</div>
-  <app-bizonylatafatabla [enIdclick]="false" [Dto]="bizonylatservice.LstAfaDto"></app-bizonylatafatabla>
+  <app-bizonylatafatabla [enIdclick]="false" [Dto]="bizonylatservice.AfaDto"></app-bizonylatafatabla>
   <div>Termékdíj összesítés</div>
-  <app-bizonylattermekdijtabla [enIdclick]="false" [Dto]="bizonylatservice.LstTermekdijDto"></app-bizonylattermekdijtabla>
+  <app-bizonylattermekdijtabla [enIdclick]="false" [Dto]="bizonylatservice.TermekdijDto"></app-bizonylattermekdijtabla>
 </div>
