--- a/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
+++ b/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
@@ -18,13 +18,17 @@
               (click)="modositas()" class="btn btn-sm btn-outline-primary navgomb">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
+      <button [disabled]="eppFrissit" (click)="projekt()" class="btn btn-sm btn-outline-primary navgomb">
+        Projekt
+      </button>
     </nav>
   </div>
 
   <!--  export enum UgyfelEgyMode {
     Reszletek = 1,
     Torles = 2,
-    Modositas = 3
+    Modositas = 3,
+    Projekt = 4
     }-->
 
   <ng-container *ngIf="ugyfelservice.EgyMode === 1">
@@ -36,7 +40,12 @@
   <ng-container *ngIf="ugyfelservice.EgyMode === 3">
     <app-ugyfel-szerkesztes></app-ugyfel-szerkesztes>
   </ng-container>
+  <ng-container *ngIf="ugyfelservice.EgyMode === 4">
+    <app-ugyfel-nincsprojekt *ngIf="nincsProjekt"></app-ugyfel-nincsprojekt>
+    <app-projekt-reszletek *ngIf="!nincsProjekt"></app-projekt-reszletek>
+  </ng-container>
 
   <app-errormodal [cim]="ugyfelservice.cim"></app-errormodal>
 </div>
+<app-spinner *ngIf="eppFrissit"></app-spinner>
 
