--- a/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
+++ b/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
@@ -3,7 +3,7 @@
   <tr>
     <th>Id</th>
     <th>Sorszám</th>
-    <th>Ügyfél</th>
+    <th>Ügyfél és cím</th>
     <th>Bizonylat kelte</th>
     <th>Teljesítés kelte</th>
     <th>Fizetési mód</th>
@@ -25,7 +25,8 @@
       <td *ngIf="!enIdclick">{{item.BIZONYLATKOD}}</td>
       <td>{{item.BIZONYLATSZAM}}</td>
       <td>
-        <div style="width: 200px">{{item.UGYFELNEV}}</div>
+        <div style="width: 250px">{{item.UGYFELNEV}}</div>
+        <div style="width: 250px">{{item.UGYFELCIM}}</div>
       </td>
 
       <td>{{item.BIZONYLATKELTE | datehun}}</td>
