--- a/src/app/bizonylat/bizonylat-reszletek/bizonylat-reszletek.component.html
+++ b/src/app/bizonylat/bizonylat-reszletek/bizonylat-reszletek.component.html
@@ -3,7 +3,7 @@
   <div>Bizonylat</div>
   <app-bizonylattabla [enIdclick]="false" [Dto]="dto"></app-bizonylattabla>
   <div>Tételek</div>
-  <app-bizonylatteteltabla [enIdclick]="false" [Dto]="bizonylatservice.TetelDto"></app-bizonylatteteltabla>
+  <app-bizonylatteteltabla [enEdit]="false" [Dto]="bizonylatservice.TetelDto"></app-bizonylatteteltabla>
   <div>ÁFA összesítés</div>
   <app-bizonylatafatabla [enIdclick]="false" [Dto]="bizonylatservice.AfaDto"></app-bizonylatafatabla>
   <div>Termékdíj összesítés</div>
