--- a/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
+++ b/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
@@ -23,6 +23,8 @@
     <tr>
       <td *ngIf="enIdclick" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.BIZONYLATKOD}}</td>
       <td *ngIf="!enIdclick">{{item.BIZONYLATKOD}}</td>
+
+      <td>{{item.BIZONYLATKOD}}</td>
       <td>{{item.BIZONYLATSZAM}}</td>
       <td>
         <div style="width: 250px">{{item.UGYFELNEV}}</div>
