--- a/src/app/bizonylat/bizonylatteteltabla/bizonylatteteltabla.component.html
+++ b/src/app/bizonylat/bizonylatteteltabla/bizonylatteteltabla.component.html
@@ -1,6 +1,8 @@
 <table class="table table-bordered table-sm table-responsive" style="border: none">
   <thead>
   <tr>
+    <th *ngIf="enEdit"></th>
+    <th *ngIf="enEdit"></th>
     <th>Id</th>
     <th>Megnevezés</th>
     <th>Mennyiség</th>
@@ -15,8 +17,14 @@
   <tbody>
   <ng-container *ngFor="let item of Dto; let i = index">
     <tr>
-      <td *ngIf="enIdclick" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.BIZONYLATTETELKOD}}</td>
-      <td *ngIf="!enIdclick">{{item.BIZONYLATTETELKOD}}</td>
+      <td *ngIf="enEdit" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer;padding-left: 8px;padding-right: 8px"
+          (click)="dotorles(i)">
+        <i class="fa fa-minus" aria-hidden="true"></i></td>
+      <td *ngIf="enEdit" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer;padding-left: 8px;padding-right: 8px"
+          (click)="domodositas(i)">
+        <i class="fa fa-edit" aria-hidden="true"></i></td>
+
+      <td>{{item.BIZONYLATTETELKOD}}</td>
       <td>{{item.MEGNEVEZES}}</td>
       <td style="text-align: right">{{item.MENNYISEG | number: '1.2-2'}}</td>
       <td>{{item.ME}}</td>
